# diesel_crud_trait

./: Cargo.toml  README.md
diesel-crud-trait/: Cargo.toml
diesel-crud-trait/src/: error.rs  lib.rs
diesel-crud-trait_derive/: Cargo.toml
diesel-crud-trait_derive/doc/: derive.md
diesel-crud-trait_derive/src/: lib.rs
