[package]
name = "diesel-crud-trait"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
diesel = { git="https://github.com/diesel-rs/diesel", rev ="0ffbed6", default-features=false } 
diesel-crud-trait_derive = {path="../diesel-crud-trait_derive", optional = true}
[features]
default=["derive"]
derive=["diesel-crud-trait_derive"]
all_methods=["diesel-crud-trait_derive/all_methods"]
